@@ -91,8 +91,6 @@ n-i-bz  exp-sgcheck asserts on gcc-4.6.2 generated Dwarf3
 
 305728  Add support for AVX2 instructions
 
-305948  ppc64: code generation for ShlD64 / ShrD64 asserts
-
 305957  m_debuginfo/d3basics.c:965 (vgModuleLocal_evaluate_GX):
         Assertion 'aMin == (Addr)0' failed.
 
