@@ -45,6 +45,7 @@ m = merged into 3_8_BRANCH
 305690 m  [381] DRD reporting invalid semaphore when sem_trywait returns
                 EAGAIN or sem_timedwait returns ETIMEDOUT
 305926 m  [381] Invalid alignment checks for some AVX instructions
+305948    [390] ppc64: code generation for ShlD64 / ShrD64 asserts
 306054    [390] s390x: Condition code computation for convert-to-int/logical
 306310    [390] 3.8.0 release tarball missing some files
 n-i-bz m  [381] shmat of a segment > 4Gb does not work 
